styles.css
:root {
  --bg-color: #fafafa;
  --fg-color: #302C34;
  --secondary-fg-color: #640D66;
  --secondary-bg-color: #EA79A2;
  --secondary-accent-color: #ffe6f7;
  --accent-color: #3e08c6;
}

html {
  height: 100%;
  opacity: 1;
}

html.loading {
  opacity: 0;
  transition: opacity 1s ease-in-out;
}

body {
  font-family: "area-normal", sans-serif;
  margin: 0;
  padding: 0;
  background-color: var(--bg-color);
  color: var(--fg-color);
  opacity: 1;
}

header {
  color: var(--fg-color);
  padding: 1rem 0;
  text-align: center;
}

h1, h2, p, button {
  font-family: "area-normal", sans-serif;
  margin-left: 10vw;
  margin-right: 10vw;
}

.intro {
  margin: 50px 0;
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: auto auto;
}

.intro h1 {
  background: rgb(215,85,132);
  background: linear-gradient(144deg, rgba(215,85,132,1) 0%, rgb(163, 22, 165) 50%, rgb(10, 0, 202) 100%);
  width: min-content;
  background-clip: text;
  color: transparent;
  font-size: 5em;
  font-style: italic;
  margin-bottom: 0;
}

.intro h2 {
  font-size: 2.5em;
  font-weight: 200;
  width:80vw;
}

.intro h1, .intro h2 {
  grid-column: 1 / 3;
}

.intro p {
  line-height: 30px;
  max-width: 40vw;
  grid-column: 1 / 2;
}

#computer-lottie-animation {
  display: block;
  float: right;
  width: 40vw;
  height: auto;
  grid-column: 2 / 3;
  margin: -150px 0px;
}

.purple-button {
  border: none;
  border-radius: 20px;
  color: var(--bg-color);
  cursor: pointer;
  background-color: var(--secondary-fg-color);
  align-items: center;
  box-sizing: border-box;
  display: flex;
  font-family: Inter, sans-serif;
  font-size: 16px;
  height: 48px;
  justify-content: center;
  line-height: 24px;
  max-width: 100%;
  padding: 0 25px;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
}

.purple-button:after {
  background-color: var(--secondary-bg-color);
  border-radius: 20px;
  content: "";
  display: block;
  height: 48px;
  left: 0;
  width: 100%;
  position: absolute;
  top: -2px;
  transform: translate(8px, 8px);
  transition: transform .2s ease-out;
  z-index: -1;
}

.purple-button:hover:after {
  transform: translate(0, 0);
}

.purple-button:active {
  background-color: var(--bg-color);
  color: var(--secondary-fg-color);
  outline: 0;
}

.purple-button:hover {
  outline: 0;
}

@media (min-width: 768px) {
  .purple-button {
    padding: 0 40px;
  }
}


/* Styling the nav bar */
.top-nav {
  padding: 0 20px;
  font-family: "area-normal", sans-serif;
  font-weight: 600;
  color: var(--secondary-fg-color);
}

.top-nav ul {
  list-style-type: none; /* Remove bullet points */
  margin: 0;
  padding: 0;
  display: flex; /* Align items horizontally */
  justify-content: space-around; /* Evenly space the links */
}

.top-nav li {
  margin: 0;
  padding: 15px 0; /* Vertical padding */
}

.top-nav a {
  text-decoration: none; /* Remove underline */
  color: var(--fg-color); /* White text */
  font-size: 16px;
  padding: 10px 15px;
  border-radius: 20px; /* Rounded corners on hover */
  transition: background-color 0.3s, color 0.3s; /* Smooth transition */
  font-family: "area-normal", sans-serif;
}

.top-nav a:hover {
  background-color: var(--secondary-accent-color); /* Darker background on hover */
  border-radius: 20px; /* Rounded corners on hover */
  color: var(--secondary-fg-color);
}


h3 {
  color: var(--bg-color);
  padding: 0;
  margin: 0;
  text-align: center;
  font-size: 4em;
  font-weight: 200;
  background-color: var(--secondary-fg-color);
  margin-top: -50px;
  padding-bottom: 50px;
}

.projects {
  display: flex;
  gap: 20px;
  justify-content: space-around;
  flex-wrap: wrap;
  background-color: var(--secondary-fg-color);
  padding-bottom: 500px;
}

.project {
  border: 1px solid #ccc;
  border-radius: 30px;
  overflow: hidden;
  text-align: center;
  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
  transition: transform 0.3s, box-shadow 0.3s;
  max-width: 300px;
  min-width: 250px;
  height: 400px;
  flex: 1 1 calc(33.333% - 40px);
  margin: 10px;
  background-color: var(--bg-color);
}

.project a {
  text-decoration: none;
  color: inherit;
}

.project img {
  width: 100%;
  height: auto;
}

.project h4, .project p, .project button {
  margin: 10px 0;
}

.project h4 {
  font-size: 1.5em;
  font-weight: 500;
  margin: 20px 20px 0 20px;
  color: var(--secondary-fg-color);
}

.project p {
  font-size: 0.75em;
  padding: 12px 40px;
  line-height: 16px;
}

.project button {
  margin: 0 auto;
}

.project:hover {
  transform: scale(1.05);
  box-shadow: 0 8px 16px rgba(0,0,0,0.2);
  border: var(--secondary-bg-color) 3px solid;
}

.learn-more-wrap {
  background-color: var(--secondary-fg-color);
  color: var(--bg-color);
  padding: 10px;
  border: none;
  border-radius: 20px;
  max-width: 100px;
  max-height: 20px;
  margin: 0 auto;
  z-index: 1;
}

.learn-more {
  background-color: var(--secondary-fg-color);
  color: var(--bg-color);
  border: none;
  padding: 20px;
  border-radius: 20px;
}

.project:hover .learn-more {
  background-color: var(--secondary-bg-color);
  border-radius: 30px;
  z-index: -1;
}

.learn-more {
  border-radius: 30px;
  background-color: var(--secondary-fg-color);
  border: none;
  color: var(--bg-color);
  text-align: center;
  font-size: 16px;
  padding: 16px;  transition: all 0.5s;
  cursor: pointer;
  margin: 36px;
  display: inline-block;
  position: relative;
  transition: 0.5s;
}

.learn-more:after {
  content: '➜';
  position: absolute;
  opacity: 0;
  top: 14px;
  right: -20px;
  transition: 0.5s;
}

.project:hover .learn-more {
  padding-right: 24px;
  padding-left: 8px;
}

.project:hover .learn-more:after {
  opacity: 1;
  right: 10px;
}

.slideshow-container {
  position: relative;
  max-width: 100%;
  margin: auto;
}

.slide {
  display: none;
}

.slide img {
  width: 100%;
}
/* ... */

